syntax = "proto2";
package rpc;

message Rpc{
	repeated Request request = 1;
}

message Request{
	required string method = 1;
	optional bytes serialized_request = 2;
}

message Msg{
	optional string code = 1;
	optional string text = 2;
}

message SyncError{
	optional string text = 1;
}

message RpcErrorResponse{
	required string method = 1;
	required string text = 2;
}

message LoginCnsInfo{
	required string cnsIp = 1;
	required string gsInfo = 2;
}

message Ping{
	required uint64 id = 1;
	required uint64 count = 2;
}

message Pong{
	required uint64 id = 1;
	required uint64 count = 2;
}
